--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://carlschirm.de/"
+baseURL = "https://fervent-dijkstra-4e8399.netlify.com/"
 languageCode = "de-DE"
 title = "Carl Schirm"
 theme = "carlschirm"
@@ -8,7 +8,7 @@ theme = "carlschirm"
 [params]
     iconset = "https://use.fontawesome.com/releases/v5.3.1/js/all.js"
     
-    description = "A website built through Hugo and blogdown."
+    description = "Im Gewerbepark Carl Schirm zwischen Tübingen und Reutlingen finden Sie auf historischem Areal Lager-, Service- und Produktionsflächen sowie Büroräume, die äußerst flexibel gestaltet werden können. Unter den bereits angesiedelten Firmen aus unterschiedlichen Branchen befinden sich Produktionsbetriebe, Handel, Internetshops, Dienstleistungen, Ingenieurbüros, junge Gründerfirmen, Labore, Lager sowie Handwerksbetriebe."
 
     # path to CSS file
     customCSS = ["/css/carlschirm/css/cs.css"
