rename Bilder -> Impressionen, change baseURL

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://fervent-dijkstra-4e8399.netlify.com/"
+baseURL = "https://carlschirm.netlify.com/"
 languageCode = "de-DE"
 title = "Carl Schirm"
 theme = "carlschirm"
