add keywords and favicon

--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,13 @@ theme = "carlschirm"
     
     description = "Im Gewerbepark Carl Schirm zwischen Tübingen und Reutlingen finden Sie auf historischem Areal Lager-, Service- und Produktionsflächen sowie Büroräume, die äußerst flexibel gestaltet werden können. Unter den bereits angesiedelten Firmen aus unterschiedlichen Branchen befinden sich Produktionsbetriebe, Handel, Internetshops, Dienstleistungen, Ingenieurbüros, junge Gründerfirmen, Labore, Lager sowie Handwerksbetriebe."
 
-    keywords = []
+    keywords = ["Gewerbe", "Gewerbepark", "Gewerberaum", "Gewerberäume", "Gewerbefläche",
+    "Gewerbe mieten", "Gewerberaum mieten", "Gewerberäume mieten", "Gewerbefläche mieten",
+    "Carl Schirm", 
+    "Reutlingen", "Tübingen", "Kirchentellinsfurt", "Stuttgart", 
+    "Vermietung", "mieten", 
+    "Servicefläche", "Produktionsfläche", "Lager", "Produktion", "Handel", "Dienstleistung", "Büro", "Gründerfirma", "Startup", "Start-up", "Labor", "Handwerksbetrieb",
+    "Produktionsfläche mieten", "Büro mieten", "Büroraum mieten"]
 
     # path to CSS file
     customCSS = ["/css/carlschirm/css/cs.css"]
