--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://carlschirm.netlify.com/"
+baseURL = "https://www.carl-schirm.de/"
 languageCode = "de-DE"
 title = "Carl Schirm"
 theme = "carlschirm"
@@ -20,7 +20,6 @@ theme = "carlschirm"
 
     # path to CSS file
     customCSS = ["/css/carlschirm/css/cs.css"]
-    # , "/css/bulma_extensions/bulma-carousel.min.css" , "/css/iframes_responsive.css"
     customJS = ["js/mobileNavbar.js"]
 
     # path to the favicon, under "static"
