change markup rendering setting

--- a/config.toml
+++ b/config.toml
@@ -41,3 +41,6 @@ theme = "carlschirm"
     changefreq = "monthly"
     priority = 0.5
     filename = "sitemap.xml"
+
+[markup.goldmark.renderer]
+    unsafe = true
